# dasClangBind_modules

./: README.md
dasAssimp/: CMakeLists.txt
dasAssimp/assimp/include_c/assimp/: IOStream.hpp  IOSystem.hpp  Importer.hpp  anim.h  camera.h  cexport.h  cfileio.h  cimport.h  color4.h  color4.inl  defs.h  include_all_import.h  light.h  material.h  matrix3x3.h  matrix3x3.inl  matrix4x4.h  matrix4x4.inl  mesh.h  metadata.h  postprocess.h  quaternion.h  quaternion.inl  replace_cplusplus_to_custom.py  scene.h  texture.h  types.h  vector2.h  vector2.inl  vector3.h  vector3.inl  version.h
dasAssimp/example/: tutorial01-assimp.cpp  tutorial01-assimp.das
dasAssimp/src/: assimp.cpp  assimp.dummy.add.inc  assimp.enum.add.inc  assimp.enum.class.inc  assimp.enum.decl.cast.inc  assimp.enum.decl.inc  assimp.func.decl.inc  assimp.func.reg.inc  assimp.func_1.cpp  assimp.func_2.cpp  assimp.func_3.cpp  assimp.h  assimp.main.cpp  assimp.struct.add.inc  assimp.struct.class.inc  assimp.struct.decl.inc  assimp.struct.impl.inc  assimp.struct.postadd.inc  generate.das  need_assimp.h
dasMsgpack/: CMakeLists.txt  generate.das  msgpack.main.cpp  tutorial01.das
